# Visual-SLAM

code/ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  libHelloSLAM2.cpp  libHelloSLAM2.h  useHello.cpp
code/ch3/: eigenMatrix.cpp
code/ch3/coordinateTransform/: CMakeLists.txt  coordinateTransform.cpp
code/ch3/eigenMatrix/: CMakeLists.txt  eigenMatrix.cpp
code/ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
code/ch3/visualizeGeometry/: CMakeLists.txt  plotTrajectory.cpp  trajectory.txt  visualizeGeometry.cpp
code/ch4/trajectoryError/: CMakeLists.txt  trajectoryError.cpp
code/ch4/useSophus/: CMakeLists.txt  useSophus.cpp
code/ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
code/ch5/rgbd/: CMakeLists.txt  joinMap.cpp
code/ch5/stereo/: CMakeLists.txt  stereoVision.cpp
